assets/css/style.css
/* Reset browser impostazioni di default */

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: sans-serif;
}

/*    UTILITY   */

.flex {
    display: flex;
}

.f-space-between {
    justify-content: space-between
}

.container-50 {
    margin: 0 auto;
    width: 50%;
}

.container-60 {
    margin: 0 auto;
    width: 60%;
}

.inline {
    display: inline;
}

.block {
    display: block;
}

.align-center {
    align-items: center;
}

.rel {
    position: relative;
}

 button {
    background-color: #0061ff;
    padding: 10px 20px;
    border: none;
    color: white;
 }


     /* HEADER  */

     li {
        list-style: none;
        display: inline ;
     }

     nav {
        padding: 20px 40px;
        position: fixed;
        width: 100%;
        top: 0;
        background-color: white;
        font-weight: bold;
     }

     header {
        background-color: #b4d0e7;
     }

     .titolo {
        margin-top: 70px;
     }

     .titoloh1 {
        padding-top: 9%;
        font-size: xx-large;
     }

     .jumbo img {
        width: 100%;
     }

     .didtitolo {
        padding-top: 20px;
     }

     .didtitolo button {
        margin: 30px 0;
     }

     #idicona {
        position: absolute;
        bottom: 2%;
        font-size: xxx-large;
     }

        /* MAIN      */

     .titmain {
        padding: 8% 0px;
     }

     .tab2 {
        width: calc(100%3);
        border: 1px solid lightgray;
        padding-bottom: 10%;
     }

     #margtab2 {
        margin: 0 10px;
     }

     .kindofppl {
        justify-content: center;
        width: 100%;
        text-align: center;
        border-bottom: 1px solid lightgrey;
        padding: 10px 0px;
     }

     .offerte button {
        margin: 10px 20px;
     }

     .icons {
        font-size: larger;
        color: #0061ff;
     }

     .pad1 {
        padding: 15px 20px;
     }

     .offerte h2 {
        margin: 20px 0px;
     }
       
     /* SECTION 2  */

     .sec2 {
        border: 1px solid lightgray;
        margin-top: 20px;
     }

     .pad2 {
        padding: 20px 20px;
     }

     h2 {
        margin: 20px 0;
     }

     #section2 button,p {
        margin: 20px 0;
        
     }

     #scritte { 
        width: 70%;

     }
    

